--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,11 +5,11 @@ androidGradlePlugin = "8.10.0"
 androidxActivity = "1.10.1"
 androidxAppCompat = "1.7.0"
 androidxBrowser = "1.8.0"
-androidxComposeBom = "2025.05.00"
-androidxComposeRuntimeTracing = "1.8.1"
+androidxComposeBom = "2025.05.01"
+androidxComposeRuntimeTracing = "1.8.2"
 androidxCore = "1.16.0"
 androidxCoreSplashscreen = "1.0.1"
-androidxDataStore = "1.1.6"
+androidxDataStore = "1.1.7"
 androidxEspresso = "3.6.1"
 androidxLifecycle = "2.9.0"
 androidxMacroBenchmark = "1.3.4"
@@ -23,16 +23,16 @@ androidxTestRunner = "1.6.2"
 androidxTestOrchestrator = "1.2.1"
 androidxTracing = "1.3.0"
 androidxUiAutomator = "2.3.0"
-androidxWindowManager = "1.3.0"
+androidxWindowManager = "1.4.0"
 androidxWork = "2.10.1"
 androidxBiometric = "1.2.0-alpha05"
-androidxAppAuth = "1.0.0-beta01"
+androidxAppAuth = "1.0.0-rc01"
 coil = "2.6.0"
 constraintlayoutVersion = "1.1.1"
 gmsPlugin = "4.4.2"
 junit4 = "4.13.2"
 kotlin = "2.0.21"
-kotlinxCoroutines = "1.9.0"
+kotlinxCoroutines = "1.10.2"
 kotlinxDatetime = "0.6.2"
 kotlinxSerializationJson = "1.8.0"
 ksp = "2.0.21-1.0.27"
@@ -44,12 +44,11 @@ retrofit = "2.11.0"
 robolectric = "4.11.1"
 secrets = "2.0.1"
 turbine = "1.1.0"
-koin = "3.5.0"
-koinAnnotations = "1.4.0"
+koin = "4.0.4"
+koinAnnotations = "2.0.1-RC1"
 material = "1.12.0"
-mockito = "5.12.0"
-mockitoKotlin = "5.3.1"
-mockitoInline = "5.2.0"
+mockito = "5.18.0"
+mockitoKotlin = "5.4.0"
 ktor = "3.0.1"
 slf4j = "2.0.7"
 gson = "2.11.0"
@@ -57,10 +56,10 @@ googlePhoneNumber = "8.13.40"
 zxing = "3.5.3"
 eudiWalletCore = "0.16.1"
 cameraCore = "1.4.2"
-owaspDependencyCheck = "12.1.0"
+owaspDependencyCheck = "12.1.1"
 material3 = "1.3.2"
-kover = "0.7.5"
-sonar = "5.1.0.4882"
+kover = "0.9.1"
+sonar = "6.2.0.5505"
 baselineprofile = "1.3.4"
 timber = "5.0.1"
 treessence = "1.1.2"
@@ -138,7 +137,6 @@ koin-annotations = { group = "io.insert-koin", name = "koin-annotations", versio
 koin-ksp = { group = "io.insert-koin", name = "koin-ksp-compiler", version.ref = "koinAnnotations" }
 mockito-core = { group = "org.mockito", name = "mockito-core", version.ref = "mockito" }
 mockito-kotlin = { group = "org.mockito.kotlin", name = "mockito-kotlin", version.ref = "mockitoKotlin" }
-mockito-inline = { group = "org.mockito", name = "mockito-inline", version.ref = "mockitoInline" }
 ktor-android = { group = "io.ktor", name = "ktor-client-android", version.ref = "ktor" }
 ktor-logging = { group = "io.ktor", name = "ktor-client-logging", version.ref = "ktor" }
 slf4j = { group = "org.slf4j", name = "slf4j-simple", version.ref = "slf4j" }
