--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,12 +1,12 @@
 [versions]
-accompanist = "0.36.0"
+accompanist = "0.37.3"
 androidDesugarJdkLibs = "2.1.5"
-androidGradlePlugin = "8.10.1"
+androidGradlePlugin = "8.11.0"
 androidxActivity = "1.10.1"
 androidxAppCompat = "1.7.1"
 androidxBrowser = "1.8.0"
-androidxComposeBom = "2025.06.00"
-androidxComposeRuntimeTracing = "1.8.2"
+androidxComposeBom = "2025.06.01"
+androidxComposeRuntimeTracing = "1.8.3"
 androidxCore = "1.16.0"
 androidxCoreSplashscreen = "1.0.1"
 androidxDataStore = "1.1.7"
@@ -24,47 +24,48 @@ androidxTestOrchestrator = "1.2.1"
 androidxTracing = "1.3.0"
 androidxUiAutomator = "2.3.0"
 androidxWindowManager = "1.4.0"
-androidxWork = "2.10.1"
+androidxWork = "2.10.2"
 androidxBiometric = "1.2.0-alpha05"
 androidxAppAuth = "1.0.0-rc01"
 coil = "3.2.0"
 constraintlayoutVersion = "1.1.1"
 gmsPlugin = "4.4.2"
 junit4 = "4.13.2"
-kotlin = "2.1.21"
+kotlin = "2.2.0"
 kotlinxCoroutines = "1.10.2"
-kotlinxDatetime = "0.6.2"
-kotlinxSerializationJson = "1.8.0"
-ksp = "2.1.21-2.0.1"
-lint = "31.10.1"
+kotlinxDatetime = "0.7.0"
+kotlinxSerializationJson = "1.8.1"
+ksp = "2.2.0-2.0.2"
+lint = "31.11.0"
 okhttp = "4.12.0"
-protobuf = "3.24.0"
-protobufPlugin = "0.9.4"
+protobuf = "4.31.1"
+protobufPlugin = "0.9.5"
 retrofit = "3.0.0"
-robolectric = "4.14.1"
+robolectric = "4.15.1"
 secrets = "2.0.1"
-turbine = "1.2.0"
-koin = "4.0.4"
-koinAnnotations = "2.0.1-RC1"
+turbine = "1.2.1"
+koin = "4.1.0"
+koinAnnotations = "2.1.0"
 material = "1.12.0"
 mockito = "5.18.0"
 mockitoKotlin = "5.4.0"
-ktor = "3.1.3"
+ktor = "3.2.0"
 slf4j = "2.0.17"
 gson = "2.13.1"
-googlePhoneNumber = "9.0.5"
+googlePhoneNumber = "9.0.8"
 zxing = "3.5.3"
 eudiWalletCore = "0.17.0"
 cameraCore = "1.4.2"
-owaspDependencyCheck = "12.1.1"
+owaspDependencyCheck = "12.1.3"
 material3 = "1.3.2"
 kover = "0.9.1"
 sonar = "6.2.0.5505"
 baselineprofile = "1.3.4"
 timber = "5.0.1"
 treessence = "1.1.2"
-rqesUiSDK = "0.2.2"
-androidxRoom = "2.7.1"
+rqesUiSDK = "0.2.3"
+androidxRoom = "2.7.2"
+cloudy = "0.2.7"
 
 [libraries]
 accompanist-permissions = { group = "com.google.accompanist", name = "accompanist-permissions", version.ref = "accompanist" }
@@ -151,6 +152,7 @@ treessence = { group = "com.github.bastienpaulfr", name = "Treessence", version.
 rqes-ui-sdk = { group = "eu.europa.ec.eudi", name = "eudi-lib-android-rqes-ui", version.ref = "rqesUiSDK" }
 androidx-room = { group = "androidx.room", name = "room-runtime", version.ref = "androidxRoom" }
 androidx-room-ksp = { group = "androidx.room", name = "room-compiler", version.ref = "androidxRoom" }
+compose-cloudy = { module = "com.github.skydoves:cloudy", version.ref = "cloudy" }
 
 # Dependencies of the included build-logic
 android-gradlePlugin = { group = "com.android.tools.build", name = "gradle", version.ref = "androidGradlePlugin" }
