--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -63,7 +63,7 @@ sonar = "6.2.0.5505"
 baselineprofile = "1.3.4"
 timber = "5.0.1"
 treessence = "1.1.2"
-rqesUiSDK = "0.2.3"
+rqesUiSDK = "0.3.0.4-SNAPSHOT"
 androidxRoom = "2.7.2"
 cloudy = "0.2.7"
 
