--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,13 +1,13 @@
 [versions]
 accompanist = "0.37.3"
 androidDesugarJdkLibs = "2.1.5"
-androidGradlePlugin = "8.12.0"
+androidGradlePlugin = "8.12.1"
 androidxActivity = "1.10.1"
 androidxAppCompat = "1.7.1"
 androidxBrowser = "1.9.0"
-androidxComposeBom = "2025.07.00"
-androidxComposeRuntimeTracing = "1.8.3"
-androidxCore = "1.16.0"
+androidxComposeBom = "2025.08.00"
+androidxComposeRuntimeTracing = "1.9.0"
+androidxCore = "1.17.0"
 androidxCoreSplashscreen = "1.0.1"
 androidxDataStore = "1.1.7"
 androidxEspresso = "3.7.0"
@@ -31,28 +31,28 @@ coil = "3.3.0"
 constraintlayoutVersion = "1.1.1"
 gmsPlugin = "4.4.3"
 junit4 = "4.13.2"
-kotlin = "2.2.0"
+kotlin = "2.2.10"
 kotlinxCoroutines = "1.10.2"
 kotlinxDatetime = "0.7.1"
 kotlinxSerializationJson = "1.9.0"
-ksp = "2.2.0-2.0.2"
-lint = "31.12.0"
+ksp = "2.2.10-2.0.2"
+lint = "31.12.1"
 okhttp = "5.1.0"
-protobuf = "4.31.1"
+protobuf = "4.32.0"
 protobufPlugin = "0.9.5"
 retrofit = "3.0.0"
-robolectric = "4.15.1"
+robolectric = "4.16-beta-1"
 secrets = "2.0.1"
 turbine = "1.2.1"
 koin = "4.1.0"
 koinAnnotations = "2.1.0"
 material = "1.12.0"
-mockito = "5.18.0"
+mockito = "5.19.0"
 mockitoKotlin = "6.0.0"
 ktor = "3.2.3"
 slf4j = "2.0.17"
 gson = "2.13.1"
-googlePhoneNumber = "9.0.11"
+googlePhoneNumber = "9.0.12"
 zxing = "3.5.3"
 eudiWalletCore = "0.18.0"
 cameraCore = "1.4.2"
