--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -41,7 +41,7 @@ okhttp = "5.1.0"
 protobuf = "4.32.0"
 protobufPlugin = "0.9.5"
 retrofit = "3.0.0"
-robolectric = "4.16-beta-1"
+robolectric = "4.16"
 secrets = "2.0.1"
 turbine = "1.2.1"
 koin = "4.1.0"
@@ -59,7 +59,7 @@ cameraCore = "1.4.2"
 owaspDependencyCheck = "12.1.3"
 material3 = "1.3.2"
 kover = "0.9.1"
-sonar = "6.2.0.5505"
+sonar = "6.3.0.5676"
 baselineprofile = "1.4.0"
 timber = "5.0.1"
 treessence = "1.1.2"
