Update JDK for tests to 21 and configure toolchain resolver
This commit updates the Java Development Kit (JDK) used for running tests to version 21. It also introduces and configures the `foojay-resolver-convention` plugin to manage Java toolchains.

Key changes:
- Modified `KotlinAndroid.kt` to set the Java launcher for tests to use JDK 21 via the `JavaToolchainService`.
- Added the `foojay-resolver-convention` plugin to `settings.gradle.kts` and defined its version in `gradle.properties`.
- Updated `fastlane/README.md` to reflect the build and deploy process.

--- a/gradle.properties
+++ b/gradle.properties
@@ -13,9 +13,9 @@
 # ANY KIND, either express or implied. See the Licence for the specific language
 # governing permissions and limitations under the Licence.
 #
-
 org.gradle.jvmargs=-Xmx8192m -Dfile.encoding=UTF-8
 android.useAndroidX=true
 kotlin.code.style=official
 android.nonTransitiveRClass=true
 android.enableR8.fullMode=false
+toolChainResolverVersion=1.0.0
